Переделал под текущую версию Hugo

--- a/layouts/partials/szam5/opinions.html
+++ b/layouts/partials/szam5/opinions.html
@@ -5,7 +5,7 @@
 </div>
 <div class="uk-background-secondary">
     <div class="uk-container uk-position-relative uk-padding" uk-slideshow="max-height:340">
-        <ul class="uk-slideshow-nav uk-dotnav uk-flex-center"></ul>
+        <!--ul class="uk-slideshow-nav uk-dotnav uk-flex-center"></!--ul -->
         <div class="uk-slider-container">
             <ul class="uk-slideshow-items uk-grid uk-child-width">
             {{ range $.Site.Data.opinions.opinions }}
