--- a/layouts/partials/szam5/videos.html
+++ b/layouts/partials/szam5/videos.html
@@ -7,7 +7,7 @@
         <div class="uk-inline">
             <img src="/images/countdown.jpg" class="uk-responsive-width uk-responsive-height" alt="{{ .Title }}">
             <div class="uk-overlay uk-overlay-default uk-position-bottom uk-text-center uk-padding-small">
-                <a class="" href="//www.youtube.com/watch?v={{ .Youtube }}" caption="{{ .Title }}">{{ .Title }}</a>
+                <a class="" target="_blank" href="//www.youtube.com/watch?v={{ .Youtube }}" caption="{{ .Title }}">{{ .Title }}</a>
             </div>
         </div>
         {{ end }}
