--- a/themes/sezam/layouts/partials/head.html
+++ b/themes/sezam/layouts/partials/head.html
@@ -8,7 +8,7 @@
 <meta name="description" content="{{ .Page.Description }}">
 <meta name="theme-color" content="#86ba41">
 <meta name="batushev" content="vitaly" />
-{{ .Hugo.Generator }}
+{{ hugo.Generator }}
 <title>{{ .Site.Title }}</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="author" href="//plus.google.com/104168046154002174751" />
