Исправил модальное окно

--- a/layouts/partials/szam5/welcome.html
+++ b/layouts/partials/szam5/welcome.html
@@ -3,7 +3,7 @@
         <h1 class="uk-text-head uk-text-uppercase">Идеальный текст</h1>
         <hr class="uk-align-center uk-width-1-6@m">
         <p class="">Скрипт sZam5 для Adobe InDesign и InCopy предназначен для нормализации текста,<br>а также для осуществления множественной процедуры поиска и замены с применением создаваемых пользователем наборов нормализаций.</p>
-        <p><button  uk-toggle="target: #szamInfo" class="uk-button uk-button-link" title="Некоторые разъяснения">Почему больше нет покупки на сайте и почему покупать теперь на Allsoft.ru или Softkey.ru</button></p>
         <a href="//allsoft.ru/software/independent-vendors/4161483/szam5/" class="uk-button uk-button-danger" title="Купить на allsoft.ru за 1300 руб." target="_blank">Купить на Allsoft.ru <span class="uk-text-bold">за 1300 руб.</span></a>
+        <p><button  uk-toggle="target: #szamInfo" class="uk-button uk-button-default" title="Мои контакты">Контакты, по которым меня можно найти</button></p>
     </div>
 </div>
