--- a/themes/sezam/layouts/partials/footer.html
+++ b/themes/sezam/layouts/partials/footer.html
@@ -1,3 +1,12 @@
-<script src="//cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit-icons.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/uikit@3.2.7/dist/js/uikit.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/uikit@3.2.7/dist/js/uikit-icons.min.js"></script>
 <script src="/js/theme.js"></script>
+
+<!-- Yandex.Metrika informer -->
+<a href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow"><img
+        src="https://informer.yandex.ru/informer/24943022/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
+        style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+        title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"
+        class="ym-advanced-informer" data-cid="24943022" data-lang="ru" /></a>
+<!-- /Yandex.Metrika informer -->
+
