--- a/layouts/partials/help/footer.html
+++ b/layouts/partials/help/footer.html
@@ -1,6 +1,6 @@
 <script src="//cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit-icons.min.js"></script>
-<script src="js/theme.js"></script>
+<script src="../js/theme.js"></script>
 
 <!-- Yandex.Metrika informer -->
 <a href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow"><img
@@ -9,4 +9,3 @@
         title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"
         class="ym-advanced-informer" data-cid="24943022" data-lang="ru" /></a>
 <!-- /Yandex.Metrika informer -->
-
