--- a/themes/sezam/layouts/index.html
+++ b/themes/sezam/layouts/index.html
@@ -1,3 +1,6 @@
+{{ define "header"}}
+    {{ partial "head.html" . }}
+{{ end }}
 {{ define "nav" }}
     {{ partial "szam5/nav.html" . }}
 {{ end }}
@@ -10,4 +13,7 @@
     {{.Content}}
     {{ partial "szam5/modals.html" . }}
     <a href="#welcome" uk-totop uk-scroll="offset: 40" class=""></a>
+{{ end }}
+{{ define "footer"}}
+{{ partial "footer.html" . }}
 {{ end }}
