Исправил путь к манифесту

--- a/layouts/partials/help/head.html
+++ b/layouts/partials/help/head.html
@@ -10,7 +10,7 @@
 <meta name="batushev" content="vitaly" />
 {{ hugo.Generator }}
 <title>{{ .Site.Title }}</title>
-<link rel="manifest" href="manifest.json">
+<link rel="manifest" href="../manifest.json">
 <link rel="author" href="//plus.google.com/104168046154002174751" />
 <link rel="shortcut icon" href="../favicon.ico" />
 <!-- link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/css/uikit.min.css" type="text/css" / -->
