--- a/layouts/partials/help/head.html
+++ b/layouts/partials/help/head.html
@@ -8,13 +8,16 @@
 <meta name="description" content="{{ .Page.Description }}">
 <meta name="theme-color" content="#86ba41">
 <meta name="batushev" content="vitaly" />
+
+<base href="https://vbatushev.github.io/szam5hugo/" />
+
 {{ hugo.Generator }}
 <title>{{ .Site.Title }}</title>
-<link rel="manifest" href="../manifest.json">
+<link rel="manifest" href="/manifest.json">
 <link rel="author" href="//plus.google.com/104168046154002174751" />
-<link rel="shortcut icon" href="../favicon.ico" />
+<link rel="shortcut icon" href="/favicon.ico" />
 <!-- link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/css/uikit.min.css" type="text/css" / -->
-<link rel="stylesheet" href="../css/uikit.szam5.min.css" type="text/css" />
+<link rel="stylesheet" href="/css/uikit.szam5.min.css" type="text/css" />
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
