--- a/layouts/partials/szam5/videos.html
+++ b/layouts/partials/szam5/videos.html
@@ -5,7 +5,7 @@
     <div uk-grid class="uk-flex-center uk-child-width-1-3@s">
         {{ range $.Site.Data.videos.data }}
         <div class="uk-inline">
-            <img src="images/countdown.jpg" class="uk-responsive-width uk-responsive-height" alt="{{ .Title }}">
+            <img src="{{ "images/countdown.jpg" | relURL }}" class="uk-responsive-width uk-responsive-height" alt="{{ .Title }}">
             <div class="uk-overlay uk-overlay-default uk-position-bottom uk-text-center uk-padding-small">
                 <a class="" target="_blank" href="//www.youtube.com/watch?v={{ .Youtube }}" caption="{{ .Title }}">{{ .Title }}</a>
             </div>
