--- a/themes/sezam/layouts/partials/footer.html
+++ b/themes/sezam/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <script src="//cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit-icons.min.js"></script>
-<script src="js/theme.js"></script>
+<script src="{{ "js/theme.js" | relURL }}"></script>
 
 <!-- Yandex.Metrika informer -->
 <a href="https://metrika.yandex.ru/stat/?id=24943022&amp;from=informer" target="_blank" rel="nofollow"><img
