--- a/layouts/partials/help/nav.html
+++ b/layouts/partials/help/nav.html
@@ -3,10 +3,10 @@
         <a href="/" class="uk-navbar-item uk-logo"><img src="../images/logo-szam5-white.png" alt="{{.Title}}" /></a>
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
-                <li><a href="../help/use/">Использование sZam5</a></li>
-                <li><a href="../help/please_help/">Когда ничего не получается</a></li>
-                <li><a href="../help/questions/">Вопросы и ответы</a></li>
-                <li><a href="../help/versions/">История версий</a></li>
+                <li><a href="{{ "help/use/" | relURL }}">Использование sZam5</a></li>
+                <li><a href="{{ "help/please_help/" | relURL }}">Когда ничего не получается</a></li>
+                <li><a href="{{ "help/questions/" | relURL }}">Вопросы и ответы</a></li>
+                <li><a href="{{ "help/versions/" | relURL }}">История версий</a></li>
             </ul>
         </div>
     </nav>
