--- a/layouts/partials/help/nav.html
+++ b/layouts/partials/help/nav.html
@@ -1,6 +1,6 @@
 <div id="nav" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" class="uk-background-secondary uk-light">
     <nav class="uk-navbar-container uk-navbar-transparent uk-container" uk-navbar style="position: relative; z-index: 980;">
-        <a href="/" class="uk-navbar-item uk-logo"><img src="../images/logo-szam5-white.png" alt="{{.Title}}" /></a>
+        <a href="/" class="uk-navbar-item uk-logo"><img src="{{ "images/logo-szam5-white.png" | relURL }}" alt="{{.Title}}" /></a>
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
                 <li><a href="{{ "help/use/" | relURL }}">Использование sZam5</a></li>
