--- a/themes/sezam/layouts/partials/head.html
+++ b/themes/sezam/layouts/partials/head.html
@@ -8,7 +8,7 @@
 <meta name="description" content="{{ .Page.Description }}">
 <meta name="theme-color" content="#86ba41">
 <meta name="batushev" content="vitaly" />
-<base href="https://vbatushev.github.io/szam5hugo/" />
+<base href="{{ .Site.BaseURL }}/" />
 
 {{ hugo.Generator }}
 <title>{{ .Site.Title }}</title>
