--- a/themes/sezam/layouts/partials/head.html
+++ b/themes/sezam/layouts/partials/head.html
@@ -7,7 +7,7 @@
 <meta name="msvalidate.01" content="BDE2466CB3FE294B30A87D1771F57FD1" />
 <meta name="description" content="{{ .Page.Description }}">
 <meta name="theme-color" content="#86ba41">
-<meta name="batushev" content="vitaly" />
+<meta name="Batushev" content="Vitaly" />
 <base href="{{ .Site.BaseURL }}/" />
 
 {{ hugo.Generator }}
