--- a/layouts/partials/szam5/screenshots.html
+++ b/layouts/partials/szam5/screenshots.html
@@ -5,7 +5,7 @@
     <div uk-grid class="uk-flex-center uk-child-width-1-3@s" uk-lightbox="animation: fade">
         {{ range $.Site.Data.screens.data }}
             <div>
-                <a href="{{ "images/{{ .Image }}" | relURL }}" data-caption="{{ .Title }}"><img data-src="{{ "images/{{ .Image }}" | relURL }}" alt="{{ .Title }}" uk-img></a>
+                <a href="/images/{{ .Image }}" data-caption="{{ .Title }}"><img data-src="images/{{ .Image }}" alt="{{ .Title }}" uk-img></a>
             </div>
         {{ end }}
     </div>
