Добавил ссылку на мои скрипты

--- a/layouts/partials/szam5/modals.html
+++ b/layouts/partials/szam5/modals.html
@@ -5,9 +5,6 @@
         <h4 class="uk-modal-title" id="myModalLabel">Мои контакты</h4>
       </div>
       <div class="uk-modal-body">
-        <!--p>С 1 июля 2017 года интернет-магазины обязаны перейти на новую схему взаимодействия с ИФНС и плательщиками, согласно 54 ФЗ,&nbsp;то есть привязать к своему магазину онлайн-кассу и выдавать элекронный чек о покупке.</!--p>
-        <p>С одной стороны, все это прекрасно, что государство наводит порядок, с другой, в связи со скромной востребованностью скрипта мне не потянуть&nbsp;подключение кассы.</p>
-        <p>Поэтому продажи через сайт я прекращаю. Скрипт можно купить в <a href="//www.softkey.ru/catalog/program.php?ID=78200&amp;ndcn=L18vTi0xMDc4MjAw#.WTZku2jyiUk7" target="_blank" rel="noopener noreferrer">SoftKey.ru</a> за <strong>1500 руб.</strong> или в <a href="//allsoft.ru/software/independent-vendors/4161483/szam5/">Allsoft.ru</a> за <strong>1300 руб</strong>. Увеличение цены вызвано необходимость оплачивать услуги данных сервисов.</p -->
         <h5>По вопросам, связанным со скриптом, можно и нужно обращаться ко мне лично:</h5>
         <ul>
             <li>по электронной почте <a href="mailto:support@szam5.com">support@szam5.com</a></li>
@@ -15,6 +12,8 @@
             <li>по Telegram:&nbsp;<a href="//t.me/vbatushev">https://t.me/vbatushev</a></li>
         </ul>
         <p>В связи с тем, что я оказываю поддержку скрипта только зарегистрированным мною пользователям, не забудьте представиться, когда будете обращаться за оной поддержкой.</p>
+
+        <p><a href="https://scripts.szam5.com" class="uk-button uk-button-primary">Мои бесплатные скрипты для Adobe InDesign</a></p>
       <div class="uk-modal-footer uk-text-right">
         <p><strong>Виталий Батушев</strong></p>
       </div>
