--- a/layouts/partials/szam5/welcome.html
+++ b/layouts/partials/szam5/welcome.html
@@ -5,5 +5,6 @@
         <p class="">Скрипт sZam5 для Adobe InDesign и InCopy предназначен для нормализации текста,<br>а также для осуществления множественной процедуры поиска и замены с применением создаваемых пользователем наборов нормализаций.</p>
         <a href="//allsoft.ru/software/independent-vendors/4161483/szam5/" class="uk-button uk-button-danger" title="Купить на allsoft.ru за 1300 руб." target="_blank">Купить на Allsoft.ru <span class="uk-text-bold">за 1300 руб.</span></a>
         <p><button  uk-toggle="target: #szamInfo" class="uk-button uk-button-default" title="Мои контакты">Контакты, по которым меня можно найти</button></p>
+        <p><a href="https://scripts.szam5.com" class="uk-button uk-button-default">Мои бесплатные скрипты для Adobe InDesign</a></p>
     </div>
 </div>
