--- a/layouts/partials/szam5/modals.html
+++ b/layouts/partials/szam5/modals.html
@@ -13,6 +13,8 @@
         </ul>
         <p>В связи с тем, что я оказываю поддержку скрипта только зарегистрированным мною пользователям, не забудьте представиться, когда будете обращаться за оной поддержкой.</p>
 
+        <p><a href="https://scripts.szam5.com" class="uk-button uk-button-primary" target="_blank">Мои бесплатные скрипты для Adobe InDesign</a></p>
+
       <div class="uk-modal-footer uk-text-right">
         <p><strong>Виталий Батушев</strong></p>
       </div>
